@@ -3,10 +3,9 @@ import javax.swing.plaf.basic.BasicBorders;
 import java.awt.*;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Comparator;
 
 public class Player {
-    public ArrayList<Ficha> tabs = new ArrayList();
+    public ArrayList<Ficha> tabs = new ArrayList<Ficha>();
     public boolean turno = false;
     public int suma = 0;
     public Player nextPlayer;
@@ -37,7 +36,7 @@ public class Player {
             ficha.played = true;
             ficha.assign = -2;
             ficha.direction = 1;
-            game.board.add(ficha);
+            game.board.addLast(ficha);
             game.gruping.remove(ficha.image);
             tabs.remove(index);
             game.repaint();
@@ -50,19 +49,20 @@ public class Player {
             nextPlayer.manageTurn();
         } else if (real) {
             int count = 0;
-            game.repaint();
-            for(Ficha x : tabs){
-                if(x.values[0] == game.allowedNumbers[0] || x.values[0] == game.allowedNumbers[1] || x.values[1] == game.allowedNumbers[0] || x.values[1] == game.allowedNumbers[1]){
+            side = -1;
+            selecteds = new ArrayList<Ficha>();
+            for (Ficha x : tabs) {
+                x.image.setText(null);
+                if (x.values[0] == game.allowedNumbers[0] || x.values[0] == game.allowedNumbers[1] || x.values[1] == game.allowedNumbers[0] || x.values[1] == game.allowedNumbers[1]) {
                     x.image.setBorder(new BasicBorders.ButtonBorder(Color.green, Color.green, Color.green, Color.green));
                     x.allowed = true;
                     count++;
-                }else{
+                } else {
                     x.image.setBorder(null);
                     x.allowed = false;
-                    x.image.setText(null);
                 }
             }
-            for(Ficha x : game.board){
+            for (Ficha x : game.board) {
                 x.image.setBorder(null);
                 x.allowed = false;
                 x.image.setText(null);
@@ -80,79 +80,74 @@ public class Player {
                 nextPlayer.manageTurn();
             }
         } else {
-            ArrayList<Ficha> disponibles = new ArrayList<>(tabs.stream().filter(x -> x.values[0] == game.allowedNumbers[0] || x.values[0] == game.allowedNumbers[1] || x.values[1] == game.allowedNumbers[0] || x.values[1] == game.allowedNumbers[1]).toList());
-            if (disponibles.size() > 0) {
-                ArrayList<Ficha> marranas = new ArrayList<>(disponibles.stream().filter(x -> x.marrana).toList());
-                if (marranas.size() == 2) {
+            Ficha[] disponibles = tabs.stream().filter(x -> x.values[0] == game.allowedNumbers[0] || x.values[0] == game.allowedNumbers[1] || x.values[1] == game.allowedNumbers[0] || x.values[1] == game.allowedNumbers[1]).toArray(Ficha[]::new);
+            if (disponibles.length > 0) {
+                Ficha[] marranas = Arrays.stream(disponibles).filter(x -> x.marrana).toArray(Ficha[]::new);
+                if (marranas.length == 2) {
                     for (Ficha ficha : marranas) {
                         ficha.played = true;
                         if (game.allowedNumbers[1] == ficha.values[0] || game.allowedNumbers[1] == ficha.values[1]) {
-                            int assigned = game.allowedNumbers[1] == ficha.values[0] ? 1 : 0;
-                            if (game.board.get(game.board.size() - 1).assign == -2) {
-                                game.board.get(game.board.size() - 1).assign = 1;
+                            Ficha f = game.board.getLast();
+                            if (f.assign == -2) {
+                                f.assign = 1;
                             } else {
-                                game.board.get(game.board.size() - 1).assign = -1;
+                                f.assign = -1;
                             }
-                            game.board.get(game.board.size() - 1).image.setText(null);
-                            game.board.get(game.board.size() - 1).image.setBorder(null);
-                            game.board.get(game.board.size() - 1).selected = false;
                             ficha.assign = 0;
-                            game.board.add(ficha);
+                            game.board.addLast(ficha);
                             game.gruping.remove(ficha.image);
                             tabs.remove(ficha);
                             game.repaint();
                         } else {
-                            int assigned = game.allowedNumbers[0] == ficha.values[0] ? 1 : 0;
-                            if (game.board.get(0).assign == -2) {
-                                game.board.get(0).assign = 0;
+                            Ficha f = game.board.getFirst();
+                            if (f.assign == -2) {
+                                f.assign = 0;
                             } else {
-                                game.board.get(0).assign = -1;
+                                f.assign = -1;
                             }
                             ficha.assign = 1;
-                            game.board.add(0, ficha);
+                            game.board.addFirst(ficha);
                             game.gruping.remove(ficha.image);
                             tabs.remove(ficha);
                             game.repaint();
                         }
                         suma -= (ficha.values[0] + ficha.values[1]);
                     }
-                    new JOptionPane("Se juegan las 2 fichas marranas de "+ marranas.get(0).values[0] + " y "+marranas.get(1).values[1]+", le quedan "+tabs.size()+" fichas a este jugador").createDialog("MESSAGE").setVisible(true);
+                    new JOptionPane("Se juegan las 2 fichas marranas de " + marranas[0].values[0] + " y " + marranas[1].values[1] + ", le quedan " + tabs.size() + " fichas a este jugador").createDialog("MESSAGE").setVisible(true);
                     turno = false;
                     nextPlayer.turno = true;
                     finishGame();
                     nextPlayer.manageTurn();
                 } else {
-                    Ficha ficha = disponibles.get((int) Math.floor(disponibles.size() * Math.random()));
+                    Ficha ficha = disponibles[(int) Math.floor(disponibles.length * Math.random())];
                     ficha.played = true;
                     if (game.allowedNumbers[1] == ficha.values[0] || game.allowedNumbers[1] == ficha.values[1]) {
                         int assigned = game.allowedNumbers[1] == ficha.values[0] ? 1 : 0;
                         game.allowedNumbers[1] = ficha.values[assigned];
-                        if (game.board.get(game.board.size() - 1).assign == -2) {
-                            game.board.get(game.board.size() - 1).assign = 1;
+                        Ficha f = game.board.getLast();
+                        if (f.assign == -2) {
+                            f.assign = 1;
                         } else {
-                            game.board.get(game.board.size() - 1).assign = -1;
+                            f.assign = -1;
                         }
-                        game.board.get(game.board.size() - 1).image.setText(null);
-                        game.board.get(game.board.size() - 1).image.setBorder(null);
-                        game.board.get(game.board.size() - 1).selected = false;
                         ficha.assign = 0;
                         ficha.direction = assigned;
-                        game.board.add(ficha);
+                        game.board.addLast(ficha);
                         game.gruping.remove(ficha.image);
                         tabs.remove(ficha);
                         game.repaint();
                     } else {
                         int assigned = game.allowedNumbers[0] == ficha.values[0] ? 1 : 0;
                         game.allowedNumbers[0] = ficha.values[assigned];
-
-                        if (game.board.get(0).assign == -2) {
-                            game.board.get(0).assign = 0;
+                        Ficha f = game.board.getFirst();
+                        if (f.assign == -2) {
+                            f.assign = 0;
                         } else {
-                            game.board.get(0).assign = -1;
+                            f.assign = -1;
                         }
                         ficha.assign = 1;
                         ficha.direction = Math.abs(assigned - 1);
-                        game.board.add(0, ficha);
+                        game.board.addFirst(ficha);
                         game.gruping.remove(ficha.image);
                         tabs.remove(ficha);
                         game.repaint();
@@ -161,7 +156,7 @@ public class Player {
                     game.cleanCanPlay();
                     turno = false;
                     nextPlayer.turno = true;
-                    new JOptionPane("Se juega la ficha "+ ficha.values[0] + " / "+ficha.values[1]+", le quedan "+tabs.size()+" fichas a este jugador").createDialog("MESSAGE").setVisible(true);
+                    new JOptionPane("Se juega la ficha " + ficha.values[0] + " / " + ficha.values[1] + ", le quedan " + tabs.size() + " fichas a este jugador").createDialog("MESSAGE").setVisible(true);
                     finishGame();
                     nextPlayer.manageTurn();
                 }
@@ -169,7 +164,7 @@ public class Player {
                 canPlay = false;
                 turno = false;
                 nextPlayer.turno = true;
-                new JOptionPane("Se pasa un turno , le quedan "+tabs.size()+" fichas a este jugador").createDialog("MESSAGE").setVisible(true);
+                new JOptionPane("Se pasa un turno , le quedan " + tabs.size() + " fichas a este jugador").createDialog("MESSAGE").setVisible(true);
                 finishGame();
                 nextPlayer.manageTurn();
             }
@@ -187,31 +182,31 @@ public class Player {
                 ficha.played = true;
                 if (game.allowedNumbers[1] == ficha.values[0] || game.allowedNumbers[1] == ficha.values[1]) {
                     //ficha por la derecha
-                    if (game.board.get(game.board.size() - 1).assign == -2) {
-                        game.board.get(game.board.size() - 1).assign = 1;
+                    Ficha f = game.board.getLast();
+                    if (f.assign == -2) {
+                        f.assign = 1;
                     } else {
-                        game.board.get(game.board.size() - 1).assign = -1;
+                        f.assign = -1;
                     }
-                    game.board.get(game.board.size() - 1).image.setText(null);
-                    game.board.get(game.board.size() - 1).image.setBorder(null);
-                    game.board.get(game.board.size() - 1).selected = false;
+                    f.selected = false;
+                    f.image.setText(null);
                     ficha.assign = 0;
-                    game.board.add(ficha);
+                    game.board.addLast(ficha);
                     game.gruping.remove(ficha.image);
                     tabs.remove(ficha);
                     game.repaint();
                 } else {
                     //ficha por la izquierda
-                    if (game.board.get(0).assign == -2) {
-                        game.board.get(0).assign = 0;
+                    Ficha f = game.board.getFirst();
+                    if (f.assign == -2) {
+                        f.assign = 0;
                     } else {
-                        game.board.get(0).assign = -1;
+                        f.assign = -1;
                     }
-                    game.board.get(0).image.setText(null);
-                    game.board.get(0).image.setBorder(null);
-                    game.board.get(0).selected = false;
+                    f.selected = false;
+                    f.image.setText(null);
                     ficha.assign = 1;
-                    game.board.add(0, ficha);
+                    game.board.addFirst(ficha);
                     game.gruping.remove(ficha.image);
                     tabs.remove(ficha);
                     game.repaint();
@@ -227,7 +222,8 @@ public class Player {
             selecteds = new ArrayList<>();
             side = -1;
             nextPlayer.manageTurn();
-        } else if (turno && selecteds.size() > 0 && side != -1) {
+        }
+        else if (turno && selecteds.size() > 0 && side != -1) {
             //fichas selecionadas validas
             Ficha ficha = selecteds.get(0);
             ficha.played = true;
@@ -235,32 +231,32 @@ public class Player {
                 if (game.allowedNumbers[1] == ficha.values[0] || game.allowedNumbers[1] == ficha.values[1]) {
                     int assigned = game.allowedNumbers[1] == ficha.values[0] ? 1 : 0;
                     game.allowedNumbers[1] = ficha.values[assigned];
-                    if (game.board.get(game.board.size() - 1).assign == -2) {
-                        game.board.get(game.board.size() - 1).assign = 1;
+                    Ficha f = game.board.getLast();
+                    if (f.assign == -2) {
+                        f.assign = 1;
                     } else {
-                        game.board.get(game.board.size() - 1).assign = -1;
+                        f.assign = -1;
                     }
-                    game.board.get(game.board.size() - 1).image.setText(null);
-                    game.board.get(game.board.size() - 1).image.setBorder(null);
-                    game.board.get(game.board.size() - 1).selected = false;
+                    f.selected = false;
+                    f.image.setText(null);
                     ficha.assign = 0;
                     ficha.direction = assigned;
-                    game.board.add(ficha);
+                    game.board.addLast(ficha);
                     game.gruping.remove(ficha.image);
                     tabs.remove(ficha);
                     game.repaint();
                 } else {
                     int assigned = game.allowedNumbers[0] == ficha.values[0] ? 1 : 0;
                     game.allowedNumbers[0] = ficha.values[assigned];
-
-                    if (game.board.get(0).assign == -2) {
-                        game.board.get(0).assign = 0;
+                    Ficha f = game.board.getFirst();
+                    if (f.assign == -2) {
+                        f.assign = 0;
                     } else {
-                        game.board.get(0).assign = -1;
+                        f.assign = -1;
                     }
                     ficha.assign = 1;
                     ficha.direction = Math.abs(assigned - 1);
-                    game.board.add(0, ficha);
+                    game.board.addFirst(ficha);
                     game.gruping.remove(ficha.image);
                     tabs.remove(ficha);
                     game.repaint();
@@ -269,59 +265,50 @@ public class Player {
                 ficha.selected = false;
                 ficha.image.setBorder(null);
                 ficha.image.setText(null);
-                selecteds = new ArrayList<>();
-                side = -1;
                 turno = false;
                 nextPlayer.turno = true;
                 finishGame();
                 nextPlayer.manageTurn();
-            } else {
+            }
+            else {
                 if (game.allowedNumbers[side] == ficha.values[0] || game.allowedNumbers[side] == ficha.values[1]) {
                     int assigned = game.allowedNumbers[side] == ficha.values[0] ? 1 : 0;
                     game.allowedNumbers[side] = ficha.values[assigned];
                     if (side == 1) {
                         ficha.assign = 0;
                         ficha.direction = assigned;
-                        if (game.board.get(game.board.size() - 1).assign == -2) {
-                            game.board.get(game.board.size() - 1).assign = 1;
+                        Ficha f = game.board.getLast();
+                        if (f.assign == -2) {
+                            f.assign = 1;
                         } else {
-                            game.board.get(game.board.size() - 1).assign = -1;
+                            f.assign = -1;
                         }
-                        game.board.get(game.board.size() - 1).image.setText(null);
-                        game.board.get(game.board.size() - 1).image.setBorder(null);
-                        game.board.get(game.board.size() - 1).selected = false;
-                        game.board.add(ficha);
+                        f.selected = false;
+                        f.image.setText(null);
+                        game.board.addLast(ficha);
                     } else {
                         ficha.assign = 1;
                         ficha.direction = Math.abs(assigned - 1);
-                        if (game.board.get(0).assign == -2) {
-                            game.board.get(0).assign = 0;
+                        Ficha f = game.board.getFirst();
+                        if (f.assign == -2) {
+                            f.assign = 0;
                         } else {
-                            game.board.get(0).assign = -1;
+                            f.assign = -1;
                         }
-                        game.board.get(0).image.setText(null);
-                        game.board.get(0).image.setBorder(null);
-                        game.board.get(0).selected = false;
-                        game.board.add(0, ficha);
+                        f.selected = false;
+                        f.image.setText(null);
+                        game.board.addFirst(ficha);
                     }
                     game.gruping.remove(ficha.image);
                     tabs.remove(ficha);
-                    tabs.forEach(x -> {
-                        x.allowed = false;
-                        x.image.setBorder(null);
-                    });
                     game.repaint();
                     suma -= (ficha.values[0] + ficha.values[1]);
                     turno = false;
-                    ficha.selected = false;
-                    ficha.image.setBorder(null);
-                    ficha.image.setText(null);
-                    selecteds = new ArrayList<>();
-                    side = -1;
                     nextPlayer.turno = true;
                     finishGame();
                     nextPlayer.manageTurn();
-                } else {
+                }
+                else {
                     new JOptionPane("la ficha seleccionada no puede ir en el lado elegido").createDialog("MESSAGE").setVisible(true);
                 }
             }
@@ -331,12 +318,17 @@ public class Player {
     void finishGame() {
         Player ganador = null;
         if (tabs.size() == 0) {
-            ganador= this;
+            ganador = this;
         } else if (Arrays.stream(game.players).noneMatch(x -> x.canPlay)) {
-            ganador =Arrays.stream(game.players).sorted(Comparator.comparingInt(x -> x.suma)).toList().get(0);
+            for (Player p : game.players) {
+                if (ganador == null || p.suma < ganador.suma) {
+                    ganador = p;
+                }
+            }
         }
-        if(ganador != null){
+        if (ganador != null) {
             new FinishMessage(ganador).setVisible(true);
+            System.exit(0);
         }
     }
 }
